--- a/web/src/assets/style/style.scss
+++ b/web/src/assets/style/style.scss
@@ -58,3 +58,45 @@ $font-sizes: (
     font-size: $size * $base-font-size;
   }
 }
+
+// flex
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+$flex-jc: (
+  start: flex-start,
+  end: flex-end,
+  center: center,
+  between: space-between,
+  around: space-around,
+);
+@each $key,$value in $flex-jc {
+  .jc-#{$key} {
+    justify-content: $value;
+  }
+}
+
+$flex-ai: (
+  start: flex-start,
+  end: flex-end,
+  center: center,
+  stretch: stretch,
+);
+@each $key,$value in $flex-ai {
+  .ai-#{$key} {
+    justify-content: $value;
+  }
+}
+
+.flex-1 {
+  flex: 1
+}
+
+.flex-grow-1 {
+  flex-grow: 1
+}
