--- a/web/src/assets/style/style.scss
+++ b/web/src/assets/style/style.scss
@@ -13,6 +13,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2em;
   background: #f1f1f1;
+  -weblit-font-smooting: antialiased;
 }
 
 a {
@@ -27,7 +28,8 @@ $colors:(
   "black": #000,
   "dark": #222,
   "dark-1": #333,
-  "grey": #999
+  "grey": #999,
+  "grey-1": #666
 );
 @each $colorKey,$color in $colors {
   .text-#{$colorKey} {
@@ -47,6 +49,7 @@ $colors:(
 // font size
 $base-font-size: 1rem;
 $font-sizes: (
+  xxs: 0.6154,
   xs: 0.7692, // 10px
   sm: 0.9231, // 12px
   md: 1, // 13px
@@ -89,7 +92,7 @@ $flex-ai: (
 );
 @each $key,$value in $flex-ai {
   .ai-#{$key} {
-    justify-content: $value;
+    align-items: $value;
   }
 }
 
@@ -129,17 +132,35 @@ $spacing-sizes: (0: 0, 1: 0.25, 2: 0.5, 3: 1, 4: 1.5, 5: 3);
 
   // .mx-1 my-1
   @each $sizeKey,$size in $spacing-sizes {
-    .#{$typeKey}-#{$sizeKey} {
+    .#{$typeKey}x-#{$sizeKey} {
       #{$type}-left: $size * $spacing-base-size;
       #{$type}-right: $size * $spacing-base-size;
     }
   }
 
-  // .mx-1 my-1
   @each $sizeKey,$size in $spacing-sizes {
-    .#{$typeKey}-#{$sizeKey} {
+    .#{$typeKey}y-#{$sizeKey} {
       #{$type}-top: $size * $spacing-base-size;
       #{$type}-bottom: $size * $spacing-base-size;
     }
   }
+}
+
+// button
+.btn {
+  border: none;
+  border-radius: 0.1538rem;
+  font-size: map-get($font-sizes, 'sm') * $base-font-size;
+  padding: .2rem .6rem;
+}
+
+// nav
+.nav {
+  .nav-item {
+    border-bottom: 3px solid transparent;
+    padding-bottom: .2rem;
+    &.active {
+      border-bottom: 3px solid #fff;
+    }
+  } 
 }
