首页轮播图

--- a/web/src/assets/style/style.scss
+++ b/web/src/assets/style/style.scss
@@ -1,3 +1,4 @@
+@import './variables';
 // 样式重置
 * {
   box-sizing: border-box;
@@ -20,17 +21,6 @@ a {
   color: #999;
 }
 
-// colors
-$colors:(
-  primary: #DB9E3F,
-  "white": #fff,
-  "light": #f9f9f9,
-  "black": #000,
-  "dark": #222,
-  "dark-1": #333,
-  "grey": #999,
-  "grey-1": #666
-);
 @each $colorKey,$color in $colors {
   .text-#{$colorKey} {
     color: $color;
@@ -42,20 +32,11 @@ $colors:(
 // text
 @each $var in (left, center, right) {
   .text-#{$var} {
-    text-align: $var;
+    text-align: $var !important;
   }
 }
 
-// font size
-$base-font-size: 1rem;
-$font-sizes: (
-  xxs: 0.6154,
-  xs: 0.7692, // 10px
-  sm: 0.9231, // 12px
-  md: 1, // 13px
-  lg: 1.0769, // 14px
-  xl: 1.2308 // 16px
-);
+
 @each $sizeKey,$size in $font-sizes {
   .fs-#{$sizeKey} {
     font-size: $size * $base-font-size;
@@ -71,29 +52,28 @@ $font-sizes: (
   flex-direction: column;
 }
 
-$flex-jc: (
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  between: space-between,
-  around: space-around,
-);
+
 @each $key,$value in $flex-jc {
   .jc-#{$key} {
     justify-content: $value;
   }
 }
 
-$flex-ai: (
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  stretch: stretch,
-);
+
 @each $key,$value in $flex-ai {
   .ai-#{$key} {
     align-items: $value;
   }
+}
+
+// 宽度
+.w-100 {
+  width: 100%;
+}
+
+// 高度
+.h-100 {
+  height: 100%;
 }
 
 .flex-1 {
@@ -104,13 +84,6 @@ $flex-ai: (
   flex-grow: 1
 }
 
-// spacing
-// 0 - 5
-// .mt-1 => margin top
-$spacing-types: (m: margin, p:padding);
-$spacing-directions: (t: top, r: right, b: bottom, l: left);
-$spacing-base-size: 1rem;
-$spacing-sizes: (0: 0, 1: 0.25, 2: 0.5, 3: 1, 4: 1.5, 5: 3);
 
 @each $typeKey,$type in $spacing-types {
   // m-1
