精灵图的使用

--- a/web/src/assets/style/_variables.scss
+++ b/web/src/assets/style/_variables.scss
@@ -3,6 +3,7 @@ $colors:(
   primary: #DB9E3F,
   "white": #fff,
   "light": #f9f9f9,
+  "light-1": #d4d9de,
   "black": #000,
   "dark": #222,
   "dark-1": #333,
@@ -10,7 +11,7 @@ $colors:(
   "grey-1": #666,
   info: #4b67af
 );
-
+$border-color: map-get($colors, 'light-1');
 // font size
 $base-font-size: 1rem;
 $font-sizes: (
