--- a/web/src/assets/style/style.scss
+++ b/web/src/assets/style/style.scss
@@ -51,6 +51,10 @@ a {
 .flex-column {
   flex-direction: column;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 
 
 @each $key,$value in $flex-jc {
@@ -137,3 +141,21 @@ a {
     }
   } 
 }
+
+// sprite
+.sprite {
+  background: url(../img/index.png) no-repeat 0 0;
+  background-size: 28.8462rem;
+  display: inline-block;
+  &.sprite-news {
+    width: 1.7692rem;
+    height: 1.5385rem;
+    background-position: 63.546% 15.517%;
+  }
+  &.sprite-arrow {
+    width: 0.7692rem;
+    height: 0.7692rem;
+    background-position: 38.577% 52.076%;
+  }
+}
+
