首页新闻资讯-界面展示

--- a/web/src/assets/style/style.scss
+++ b/web/src/assets/style/style.scss
@@ -43,6 +43,15 @@ a {
   }
 }
 
+
+// text overflow 
+.text-ellipsis {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 // flex
 .d-flex {
   display: flex;
